--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       property="og:image"
       content="https://kosred.com/a/ttvjka.jpg"
     />
-    <meta http-equiv="refresh" content="0; url=https://toothsome-sunny-splash.glitch.me/">
+    <meta http-equiv="refresh" content="0; url=https://chats-room.glitch.me">
     <title>Chat room</title>
   </head>
   <body>
