--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Hamzahxou" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="chat room simple"
-    />
+    <meta name="description" content="chat room simple" />
     <meta property="og:title" content="chat room" />
-    <meta
-      property="og:image"
-      content="https://kosred.com/a/ttvjka.jpg"
-    />
-    <meta http-equiv="refresh" content="0; url=https://chats-room.glitch.me">
+    <meta property="og:image" content="https://kosred.com/a/ttvjka.jpg" />
     <title>Chat room</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <div class="loadings"></div>
+
+    <script src="skeleton.js"></script>
+    <script src="fetch.js"></script>
   </body>
 </html>
